# enlighten-desktop

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: aws.h  awsrequest.h  cachedpreviews.h  ifile.h  ipaths.h  jpeg.h  jpegcruncher.h  logger.h  lrprev.h  previewentry.h  previewentrylevel.h  previewsdatabase.h  scanner.h  settings.h  syncaction.h  validation.h  watcher.h
include/aws/: aws.h  awsprofilesloader.h  awsrequest.h
include/platform/linux/: file.h  paths.h
include/platform/osx/: file.h  paths.h
include/synchronizers/: abstractsynchronizer.h  lrcatsynchronizer.h  previewssynchronizer.h
src/: aws.cpp  awsrequest.cpp  cachedpreviews.cpp  cli.cpp  jpeg.cpp  jpegcruncher.cpp  logger.cpp  lrprev.cpp  previewentry.cpp  previewentrylevel.cpp  previewsdatabase.cpp  scanner.cpp  settings.cpp  watcher.cpp
src/aws/: aws.cpp  awsprofilesloader.cpp  awsrequest.cpp
src/platform/linux/: file.cpp  paths.cpp
src/platform/osx/: file.cpp  paths.mm
src/synchronizers/: previewssynchronizer.cpp
test/: libintegrationtests.cpp  libunittests.cpp  lrprev_test.cpp  run_tests.py
test/data/: awsprofiles.json  previewscache.db
test/data/catalogs/: Lightroom 5 Catalog.lrcat
test/data/catalogs/Lightroom 5 Catalog Previews.lrdata/: previews.db  root-pixels.db
test/data/catalogs/Lightroom 5 Catalog Previews.lrdata/3/3829/: 3829E5FC-7F3F-4B22-94F3-FB5E2C796026-07cc63f155500a902b21fef7be6585b5.lrprev
test/data/catalogs/Lightroom 5 Catalog Previews.lrdata/6/6A2B/: 6A2B9912-3868-45E4-AE0D-7EA73F66FF63-07cc63f155500a902b21fef7be6585b5.lrprev
test/data/catalogs/Lightroom 5 Catalog Previews.lrdata/B/B089/: B089021B-7ACE-4A62-BD32-85A6C6AD5B9C-07cc63f155500a902b21fef7be6585b5.lrprev
test/integration/lib/: jpegpipeline_test.cpp  syncpreviews_test.cpp
test/spec/: logger_test.cpp  lrprev_test.cpp  previewsdatabase_test.cpp
test/unit/lib/: cachedpreviews_test.cpp  file_test.cpp  jpeg_test.cpp  jpegcruncher_test.cpp  previewentry_test.cpp  previewsdatabase_test.cpp  previewssynchronizer_test.cpp  scanner_test.cpp  settings_test.cpp  watcher_test.cpp
test/unit/lib/aws/: aws_test.cpp  awsprofilesloader_test.cpp  awsrequest_test.cpp
